--- a/HTML/Fon.css
+++ b/HTML/Fon.css
@@ -1,15 +1,20 @@
 body
 		{
-		background: #000000 url(Red_stena.jpg);
-		background-size: 2000px 1273px;	
+		background: #000000 url(Red_stena.jpg) ;
+		background-position:center center; 
+		background-repeat: no-repeat; 
+		 background-size: cover;
+		 background-attachment: fixed;      
+		
+		  
         }
 		div.container {
   width: 96%;
   max-width: 600px;
   max-height:1px;
-  margin-right:1000px; /* центрируем основной контейнер */
+  margin-right:1000px; 
 }
 img {
-  width: 100%; /* ширина картинки */
-  height: auto; /* высота картинки */
+  width: 100%; 
+  height: auto; 
 }
