--- a/HelloWorld/Views/Shared/_Layout.cshtml
+++ b/HelloWorld/Views/Shared/_Layout.cshtml
@@ -2,6 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8" />
+         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script>
+        $(function()
+        {
+            alert('Подключена последняя версия jQuery через Google хостинг');
+        });
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"]</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
