--- a/web/HelloWorld/Views/Pigs/Pigs.cshtml
+++ b/web/HelloWorld/Views/Pigs/Pigs.cshtml
@@ -19,10 +19,16 @@
             <td>@Pig.Author</td>
             <td>@Pig.Price</td>
            <!-- <td><a href="~/Home/Buy/@Pig.Id">Купить</a></td>-->
-            <!--<td> <a  href="~/Views/Pigs/Delete/@Pig.Id">Удалить</a></td>-->
-            <td>
+           <!-- <td> <a asp-action="Delete" asp-controller="PigApi" asp-route-id="@Pig.Id" href="~/Views/Pigs/Delete/@Pig.Id">Удалить</a></td>-->
+           <td>
                <form action="~\Pigs\Delete\@Pig.Id" method="GET" >
                   <button>Удалить</button>
+           
+               </form>
+            </td>
+            <td>
+               <form action="~\Pigs\Edit\@Pig.Id" method="GET" >
+                  <button>Изменить</button>
            
                </form>
             </td>
