--- a/WebApplication/Views/Shared/_CookieConsentPartial.cshtml
+++ b/WebApplication/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Http.Features
+﻿<!-- используется для представления куки-->
+@using Microsoft.AspNetCore.Http.Features
 
 @{
     var consentFeature = Context.Features.Get<ITrackingConsentFeature>();
