--- a/WebApplication/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/WebApplication/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,3 +1,4 @@
+<!-- частичное представление, которое подключает скрипты валидации формы-->
 <environment include="Development">
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
