--- a/WebApplication/Views/_ViewImports.cshtml
+++ b/WebApplication/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using WebApplication
+﻿<!-- анавливает некоторые общие для всех представлений пространства имен-->
+@using WebApplication
 @using WebApplication.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
