--- a/WebApplication/Views/Home/Create.cshtml
+++ b/WebApplication/Views/Home/Create.cshtml
@@ -16,6 +16,6 @@
         <input type="number" asp-for="Price" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Send" class="btn btn-default" />
+        <input type="submit" value="Отправить" class="button" />
     </div>
 </form>
