--- a/WebApplication/Views/Home/Delete.cshtml
+++ b/WebApplication/Views/Home/Delete.cshtml
@@ -24,7 +24,7 @@
     <div>
         <form asp-controller="Home" asp-action="Delete" method="post">
             <div class="form-group">
-                <input type="submit" class="btn btn-default" value="Удалить" />
+                <input type="submit" class="button" value="Удалить" />
             </div>
         </form>
     </div>
