--- a/WebApplication/Views/Home/Edit.cshtml
+++ b/WebApplication/Views/Home/Edit.cshtml
@@ -17,6 +17,6 @@
         <input type="number" asp-for="Price" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Send" class="btn btn-default" />
+        <input type="submit" value="Изменить" class="button" />
     </div>
 </form>
