--- a/WebApplication/wwwroot/css/site.css
+++ b/WebApplication/wwwroot/css/site.css
@@ -45,12 +45,35 @@ body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
+
+.button {
+    font-weight: 700;
+    text-decoration: none;
+    color: #000;
+    text-transform: uppercase;
+    letter-spacing: 1.6px;
+    display: inline-block;
+    border-width: 2px;
+    border-color: #000;
+    border-style: solid;
+    border-radius: 50px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 23px;
+    padding-right: 23px;
+    margin-bottom: 15px;
+}
+
+.button:hover{
+    color: #fff;
+    background-color: #000;
+}
+
+a {
+    transition: 0.2s ease-out;
+    margin-top: 1%;
+}
+
+a:hover {
+    text-decoration: none;
 }
