--- a/FoxApp/FoxApp/Views/Home/Create.cshtml
+++ b/FoxApp/FoxApp/Views/Home/Create.cshtml
@@ -2,6 +2,34 @@
 @{
     ViewBag.Title = "Добавление лисиц";
 }
+
+<style>
+    a {
+        color: #ffffff; /* Цвет обычной ссылки */
+        text-decoration: none; /* Убираем подчеркивание у ссылок */
+    }
+
+        a:visited {
+            color: #ffffff; /* Цвет посещённой ссылки */
+        }
+
+        a:hover {
+            color: #ffffff; /* Цвет ссылки при наведении на нее курсора мыши */
+            text-decoration: none;
+        }
+</style>
+<style>
+    body {
+        background: #333; /* Цвет фона */
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+<style>
+    td {
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+
 <form asp-action="create" asp-controller="home">
     <div class="form-group">
         <label asp-for="Name" class="control-label">Имя</label>
@@ -20,6 +48,6 @@
         <input type="number" asp-for="Age" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Готово" class="btn btn-default" />
+        <input type="submit" value="Готово" class="btn btn-danger" />
     </div>
 </form>
