--- a/FoxApp/FoxApp/Views/Home/Delete.cshtml
+++ b/FoxApp/FoxApp/Views/Home/Delete.cshtml
@@ -3,6 +3,34 @@
     ViewBag.Title = "Удаление лисицы";
 }
 
+<style>
+    a {
+        color: #ffffff; /* Цвет обычной ссылки */
+        text-decoration: none; /* Убираем подчеркивание у ссылок */
+    }
+
+        a:visited {
+            color: #ffffff; /* Цвет посещённой ссылки */
+        }
+
+        a:hover {
+            color: #ffffff; /* Цвет ссылки при наведении на нее курсора мыши */
+            text-decoration: none;
+        }
+</style>
+<style>
+    body {
+        background: #333; /* Цвет фона */
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+<style>
+    td {
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+
+
 <div>
     <dl class="dl-horizontal">
         <dt>Имя</dt>
@@ -29,7 +57,7 @@
     <div>
         <form asp-controller="Home" asp-action="Delete" method="post">
             <div class="form-group">
-                <input type="submit" class="btn btn-default" value="Удалить" />
+                <input type="submit" class="btn btn-danger" value="Удалить" />
             </div>
         </form>
     </div>
