--- a/FoxApp/FoxApp/Views/Home/Edit.cshtml
+++ b/FoxApp/FoxApp/Views/Home/Edit.cshtml
@@ -2,7 +2,37 @@
 @{
     ViewBag.Title = "Редактирование лисицы";
 }
+
+<style>
+    a {
+        color: #ffffff; /* Цвет обычной ссылки */
+        text-decoration: none; /* Убираем подчеркивание у ссылок */
+    }
+
+        a:visited {
+            color: #ffffff; /* Цвет посещённой ссылки */
+        }
+
+        a:hover {
+            color: #ffffff; /* Цвет ссылки при наведении на нее курсора мыши */
+            text-decoration: none;
+        }
+</style>
+<style>
+    body {
+        background: #333; /* Цвет фона */
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+<style>
+    td {
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+
 <form asp-action="edit" asp-controller="home" asp-route-id="@Model.Id">
+    @*Без этого значения Entity Framework не сможет*@
+    @*обновить соответствующую модель в базе данных.*@
     <div class="form-group">
         <label asp-for="Name" class="control-label">Имя</label>
         <input type="text" asp-for="Name" class="form-control" />
@@ -20,6 +50,6 @@
         <input type="number" asp-for="Age" class="form-control" />
     </div>
     <div class="form-group">
-        <input type="submit" value="Готово" class="btn btn-default" />
+        <input type="submit" value="Готово" class="btn btn-danger" />
     </div>
 </form>
