--- a/FoxApp/FoxApp/Views/Home/Index.cshtml
+++ b/FoxApp/FoxApp/Views/Home/Index.cshtml
@@ -2,15 +2,43 @@
 @{
     ViewBag.Title = "Все лисицы";
 }
-<a asp-action="Create">Добавить лисицу</a>
+<button type="button" class="btn btn-secondary btn-lg btn-block"><a asp-action="Create">Добавить лисицу</a></button>
+@*<a asp-action="Create">Добавить лисицу</a>*@
+
+<style>
+    a {
+        color: #ffffff; /* Цвет обычной ссылки */
+        text-decoration: none; /* Убираем подчеркивание у ссылок */
+    }
+
+        a:visited {
+            color: #ffffff; /* Цвет посещённой ссылки */
+        }
+
+        a:hover {
+            color: #ffffff; /* Цвет ссылки при наведении на нее курсора мыши */
+            text-decoration: none;
+        }
+</style>
+<style>
+    body {
+        background: #333; /* Цвет фона */
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
+<style>
+    td {
+        color: #ffffff; /* Цвет текста */
+    }
+</style>
 
 <table class="table">
     @*<tr><td>Имя</td><td>Вид</td><td>Описание</td></tr>*@
     @foreach (var item in Model)
     {
         <tr>
-            <td>@item.Name</td>
-            <td>
+            <td align="center">@item.Name</td>
+            <td align="right">
                 <a asp-action="Details" asp-controller="Home" asp-route-id="@item.Id">Подробнее</a> |
                 <a asp-action="Edit" asp-controller="Home" asp-route-id="@item.Id">Изменить</a> |
                 <a asp-action="Delete" asp-controller="Home" asp-route-id="@item.Id">Удалить</a>
